discussion/kv_engine/155138/155138_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Add support for no engine context in GlobalTask::execute()

Tasks running in the core should not set have the engine context
set before calling run.

Change-Id: I2efa5bf2bf47259cff0ce4632b31e5f2489f7c8e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-08 20:52:29.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 21:46:16.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9612/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9612/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9612/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36569/ : FAILURE

Failure of GoogleTest "AllBackends/DurabilityBucketTest.CasCheckMadeForNewPrepare/persistent_value_only":

<pre>
[ RUN      ] AllBackends/DurabilityBucketTest.CasCheckMadeForNewPrepare/persistent_value_only
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(130): error: Expected equality of these values:
  MoreAvailable::No
    Which is: 1-byte object <00>
  res.moreAvailable
    Which is: 1-byte object <01>
[  FAILED  ] AllBackends/DurabilityBucketTest.CasCheckMadeForNewPrepare/persistent_value_only, where GetParam() = ("persistent", "value_only") (18 ms)
AllBackends/DurabilityBucketTest.CasCheckMadeForNewPrepare/persistent_value_only
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36569/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11188/ : FAILURE

Compile error at [2021-06-08T21:17:08.297Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11188/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11337/ : FAILURE

Compile error at [2021-06-08T21:09:48.052Z] /opt/gcc-10.2.0/include/c++/10.2.0/type_traits:918:52:
error: non-constant condition for static assertion
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11337/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8210/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/155/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31248/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10259/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11608/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19191/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
